src/styles/device.css
/* ... */
@media (min-width: 640px) {
  .device-type__name {
    margin-top: 20px;
  }
}

.select-device {
  padding: 50px 20px 50px 20px;
  background-color: rgba(0, 0, 0, 0.06);
}
@media (min-width: 992px) {
  .select-device {
    padding: 50px 100px 40px 100px;
  }
}

@media (min-width: 992px) {
  .select-device__header {
    display: flex;
  }
}

.select-device__heading {
  font-size: 24px;
  font-weight: bold;
  margin: 0;
}

.select-device__search {
  z-index: 90;
  position: relative;
  margin-top: 20px;
}
@media (min-width: 992px) {
  .select-device__search {
    margin: 0 0 0 auto;
    width: 375px;
    transform: translate(0, -15px);
  }
}

.select-device__search::before {
  content: "";
  position: absolute;
  display: inline-block;
  width: 20px;
  height: 100%;
  left: 15px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/search.svg");
}

.select-device__search-input {
  width: 100%;
  height: 50px;
  padding: 0;
  text-indent: 50px;
  background: var(--white);
  border: 1px solid var(--gray-5);
  box-sizing: border-box;
  border-radius: 40px;
  outline: none;
}

.select-device__search-input::placeholder {
  color: var(--gray-3);
  font-size: 14px;
}

.select-device__search-clear-btn {
  position: absolute;
  right: 15px;
  top: 0;
  height: 100%;
  background-color: rgba(0, 0, 0, 0);
  padding: 12px 0;
}
.select-device__search-clear-btn:hover {
  cursor: pointer;
}
.select-device__search-clear-btn:focus {
  outline: none;
}

.suggestion-list {
  list-style: none;
  position: absolute;
  margin: 8px 0 0 0;
  padding: 0;
  width: 100%;
  background: var(--white);
  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.16);
  border-radius: 10px;
}

.suggestion-list__link {
  display: block;
  padding: 18px 0 18px 40px;
  font-size: 14px;
  color: var(--black);
}
.suggestion-list__link:hover {
  color: var(--black);
  background-color: var(--gray-6);
}

.fullscreen-search {
  z-index: 200;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--white);
}

.fullscreen-search__header-background {
  position: fixed;
  background-color: var(--black);
  opacity: 0.06;
  width: 100%;
  height: 80px;
}

.fullscreen-search__header {
  display: flex;
  width: 100%;
  height: 80px;
  padding: 15px 0 15px 20px;
  border-bottom: 1px solid var(--gray-5);
}

.fullscreen-search__header::before {
  z-index: 200;
  content: "";
  position: absolute;
  display: inline-block;
  width: 20px;
  height: 25px;
  top: 28px;
  left: 34px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/search.svg");
}

.fullscreen-search__search-input {
  position: relative;
  flex-grow: 1;
  margin: 0;
  text-indent: 45px;
  background: var(--white);
  border: 1px solid var(--black);
  box-sizing: border-box;
  border-radius: 40px;
  outline: none;
}
.fullscreen-search__search-input::placeholder {
  color: var(--gray-3);
  font-size: 14px;
}

.fullscreen-search__search-cancel-btn {
  z-index: 200;
  margin: 0 20px 0 10px;
  background: none;
  font-size: 18px;
  color: var(--black);
}
.fullscreen-search__search-cancel-btn:hover {
  cursor: pointer;
}
.fullscreen-search__search-cancel-btn:focus {
  outline: none;
}

.fullscreen-suggestion-list {
  list-style: none;
  margin: 0;
  padding: 0;
  height: calc(100vh - 80px);
  overflow: scroll;
}

.fullscreen-suggestion-list__link {
  display: block;
  width: 100%;
  padding: 20px;
  color: var(--black);
  font-size: 14px;
}

.device-tag-list {
  list-style: none;
  display: flex;
  padding: 0;
  margin: 20px 0 0 0;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.device-tag-list::-webkit-scrollbar {
  display: none;
}
@media (min-width: 992px) {
  .device-tag-list {
    flex-wrap: wrap;
    margin: -10px 0 0 -10px;
  }
}

.device-tag-list__item:not(:first-child) {
  margin-left: 10px;
}
@media (min-width: 992px) {
  .device-tag-list__item {
    margin: 10px 0 0 10px;
  }
}

.device-tag-list__link {
  display: block;
  color: var(--black);
  padding: 10px 15px;
  font-size: 14px;
  height: 45px;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  white-space: nowrap;
}
.device-tag-list__link:hover {
  color: var(--black);
}

.device-section-list {
  list-style: none;
  margin: 0 0 0 0;
  padding: 0;
}

.device-section-list__item:not(:first-child) {
  margin-top: 20px;
}

.device-section-list__request-device:not(:first-child) {
  margin: 10px 0 0 0;
}

.device-section-list__item {
  margin-bottom: 100px;
}

.device-section {
  scroll-margin-top: 80px;
}

.device-section__brand-name {
  color: var(--gray-1);
  font-size: 24px;
  font-weight: 700;
  margin: 0 0 30px 0;
}

.device-grid-list {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  margin: 10px 0 0 0;
  padding: 0;
  column-gap: 10px;
  row-gap: 20px;
}

@media (min-width: 680px) {
  .device-grid-list {
    column-gap: 20px;
    row-gap: 40px;
  }
}

.device-grid-container {
  margin: 0 0 0 0;
}

.device-grid-container-header {
  color: var(--gray-1);
  font-size: 18px;
  font-weight: 600;
  margin: 0 0 20px 0;
}

.device-grid {
  position: relative;
  height: 160px;
  width: 160px;
  background-color: var(--white);
  border: 1px solid var(--gray-5);
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
  border-radius: 10px;
}
@media (min-width: 992px) {
  .device-grid {
    height: 295px;
    width: 295px;
  }
}

.device-grid__link {
  display: block;
  height: 100%;
  width: 100%;
}

.device-grid__image {
  width: 100%;
  height: 100%;
  object-fit: contain;
  padding: 20px 4px;
}
/* ... */

